--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=BLE SDK for Arduino
 version=1.0.0
-author=Cheong
-maintainer=Cheong <cheong@redbearlab.com>
+author=RedBearLab
+maintainer=RedBearLab <support@redbearlab.com>
 sentence=Nordic BLE SDK for Arduino for nRF8001 products such as the BLE Shield, Blend and Blend Micro.
 paragraph=Provides a library and a lot of tutorials/examples for developing BLE application using Nordic nRF8001 BLE connectivity chip for Arduino.
 category=Communication
